# clover-bridge

./: CMakeLists.txt  README.md  run.sh
src/: camera.cpp  camera.h  draw.cpp  draw.h  main.cpp  parts.cpp  parts.h  useful_macros.h
